fix: Image is covered by Header

--- a/frontend/src/components/css/App.css
+++ b/frontend/src/components/css/App.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
 }
 
-#main-wrap {
+.main-wrap {
   width: 100%;
   height: 100%;
   display: flex;
