--- a/frontend/src/components/css/Header.css
+++ b/frontend/src/components/css/Header.css
@@ -1,13 +1,3 @@
-header {
-  background-color: rgb(245, 213, 37);
-  width: 100%;
-  z-index: 2011;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 #header-left {
   display: flex;
   flex-direction: row;
